// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the empty state 1`] = `
<div
  className="m-app"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className="m-route-picker__tab-button-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className="m-route-filter__clear-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    loading...
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`renders with a selected vehicle 1`] = `
<div
  className="m-app"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className="m-route-picker__tab-button-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className="m-route-filter__clear-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  />
  <div
    className="m-vehicle-properties-panel"
    id="m-vehicle-properties-panel"
  >
    <div
      className="m-vehicle-properties-panel__header"
    >
      <div
        className="m-vehicle-properties-panel__label"
      >
        v1
      </div>
      <div
        className="m-vehicle-properties-panel__variant"
      >
        <div
          className="m-vehicle-properties-panel__inbound-outbound"
        >
          Inbound
        </div>
        <div
          className="m-vehicle-properties-panel__variant-name"
        >
          28_
        </div>
      </div>
      <button
        className="m-close-button"
        onClick={[Function]}
      >
        <span
          className="m-close-button__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <table
      className="m-vehicle-properties-panel__vehicle-properties"
    >
      <tbody>
        <tr>
          <th
            className="m-vehicle-properties-panel__vehicle-property-label"
          >
            Run
          </th>
          <td
            className="m-vehicle-properties-panel__vehicle-property-value"
          >
            run1
          </td>
        </tr>
        <tr>
          <th
            className="m-vehicle-properties-panel__vehicle-property-label"
          >
            Vehicle
          </th>
          <td
            className="m-vehicle-properties-panel__vehicle-property-value"
          >
            v1
          </td>
        </tr>
        <tr>
          <th
            className="m-vehicle-properties-panel__vehicle-property-label"
          >
            Operator
          </th>
          <td
            className="m-vehicle-properties-panel__vehicle-property-value"
          >
            SMITH
             #
            op1
          </td>
        </tr>
      </tbody>
    </table>
    <div
      className="m-vehicle-properties-panel__location"
    >
      <div
        className="m-vehicle-properties-panel__vehicle-property-label"
      >
        Next Stop
      </div>
      <div
        className="m-vehicle-properties-panel__vehicle-property-value"
      >
        stop
      </div>
      <a
        className="m-vehicle-properties-panel__link"
        href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
      >
        Directions
      </a>
    </div>
    <button
      className="m-vehicle-properties-panel__close"
      onClick={[Function]}
    >
      Close
    </button>
  </div>
  <div
    className="m-vehicle-properties-panel__modal-overlay"
    onClick={[Function]}
  />
</div>
`;

exports[`renders with routes 1`] = `
<div
  className="m-app"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className="m-route-picker__tab-button-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className="m-route-filter__clear-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`renders with timepoints 1`] = `
<div
  className="m-app"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className="m-route-picker__tab-button-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className="m-route-filter__clear-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;

exports[`renders with vehicles 1`] = `
<div
  className="m-app"
>
  <div
    className="m-route-picker visible"
  >
    <div
      className="m-route-picker__tab"
    >
      <button
        className="m-route-picker__tab-button"
        onClick={[Function]}
      >
        <span
          className="m-route-picker__tab-button-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <ul
      className="m-route-picker__selected-routes"
    />
    <div
      className="m-route-filter"
    >
      <select
        className="m-route-filter__type"
        onChange={[Function]}
        value="id"
      >
        <option
          value="id"
        >
          Route ID
        </option>
      </select>
      <div
        className="m-route-filter__text"
      >
        <input
          className="m-route-filter__input"
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
        <button
          className="m-route-filter__clear"
          onClick={[Function]}
        >
          <span
            className="m-route-filter__clear-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </div>
    </div>
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          1
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button "
          onClick={[Function]}
        >
          28
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-route-ladders"
  />
</div>
`;
